tests/fixtures/invalid/pow_int_set_dict.py
# Cannot call pow() with Int, Set[int], Dict[str, int]
x = pow(1, {1, 2, 3}, {"a": 1})
